--- a/template/registro.html
+++ b/template/registro.html
@@ -5,6 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="../css/alertify.min.css">
+    <link rel="stylesheet" href="../css/themes/default.css">
+    <link href="https://fonts.googleapis.com/css?family=Roboto:400,700&display=swap" rel="stylesheet">
     <title>Registro</title>
 </head>
 <body>
@@ -13,19 +16,20 @@
             <div class="registro">
                 <h3>Registrate</h3>
                 <form action="#">
-                    <input type="text" name="nombre" placeholder="Nombre">
-                    <input type="text" name="cedula" placeholder="Cedula">
-                    <input type="tel" name="telefono" placeholder="Telefono">
-                    <textarea name="direcciòn" placeholder="Dirección Fiscal"></textarea>
-                    <input type="date" name="fecha" placeholder="Fecha del contrato">
-                    <input type="email" name="email" placeholder="Correo Electrónico">
-                    <input type="password" name="password" placeholder="Contraseña">
-                    <input type="button" class="alt-form" value="Registrar">
+                    <input type="text" name="nombre" placeholder="Nombre" id="nombre">
+                    <input type="text" name="cedula" placeholder="Cedula" id="cedula">
+                    <input type="tel" name="telefono" placeholder="Telefono" id="telefono">
+                    <textarea name="direccion" placeholder="Dirección Fiscal" id="direccion"></textarea>
+                    <input type="date" name="fecha" placeholder="Fecha del contrato" id="fecha">
+                    <input type="email" name="email" placeholder="Correo Electrónico" id="correo">
+                    <input type="password" name="password" placeholder="Contraseña" id="pass">
+                    <input type="button" class="alt-form" value="Registrar" onclick="Registro()">
                 </form>
             </div><!--Registro-->
         </div><!--formulario-->
     </div><!--Contenedor-->
-    <script src="js/jquery-3.3.1.min.js"></script>
-    <script src="js/main.js"></script>
+    <script src="../js/jquery-3.3.1.min.js"></script>
+    <script src="../js/alertify.min.js"></script>
+    <script src="../js/main.js"></script>
 </body>
 </html>
