--- a/template/consultar_servicio.html
+++ b/template/consultar_servicio.html
@@ -60,7 +60,7 @@
             </li>
             <!--Consultar cita-->
             <li class="nav-item">
-                <a href="#" class="nav-link text-ligth d-flex align-items-center blanco">
+                <a href="consultar_cita.html" class="nav-link text-ligth d-flex align-items-center blanco">
                     <i class="material-icons mr-2">pageview</i>
                         Consultar cita
                 </a>
