--- a/template/registrar_opinion.html
+++ b/template/registrar_opinion.html
@@ -10,11 +10,12 @@
     <link rel="stylesheet" href="../css/themes/default.css">
     <link href="https://fonts.googleapis.com/css?family=Roboto:400,700&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-    <title>Panel de Administraciòn</title>
+    <link rel="shortcut icon" type = "image/x-icon" href="../img/favicon.ico" />
+    <title>Panel de Administración</title>
 </head>
 <body>
     <nav class="navbar bd-navbar navbar-expand-lg navbar-dark bg-primary">
-        <a href="cliente.html" class="navbar-brand">Admin Gestion Inmobiliaria</a>
+        <a href="cliente.html" class="navbar-brand">Grupo Gestión Inmobiliaria</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="navegacion">
                 <span class="navbar-toggler-icon"></span>
             </button>
@@ -23,7 +24,7 @@
                     <div class="row">
                         <div class="col">
                             <form action="#" class="my-2 my-lg-0">
-                                <input class="form-control" type="search" placeholder="buscar">
+                                <input class="form-control" type="search" placeholder="Buscar">
                             </form>
                         </div><!--col-->
                         <div class="col-sm-2 text-right">
@@ -35,7 +36,7 @@
     </nav><!--Navegaciòn-->
 
     <aside class="bg-dark p-4">
-        <h3 class="text-light text-center">Navegaciòn</h3>
+        <h3 class="text-light text-center">Navegación</h3>
         <ul class="nav flex-column mt-5">
             <!--Modificar datos-->
             <li class="nav-item">
@@ -48,7 +49,7 @@
             <li class="nav-item">
                 <a href="consultar_servicio.html" class="nav-link text-ligth d-flex align-items-center blanco">
                     <i class="material-icons mr-2">storage</i>
-                        Consultar Sevicios
+                        Consultar sevicios
                 </a>
             </li>
             <!--Registrar cita-->
@@ -69,7 +70,7 @@
             <li class="nav-item">
                 <a href="#" class="nav-link text-ligth d-flex align-items-center blanco">
                     <i class="material-icons mr-2">mood</i>
-                        Registrar opinion
+                        Registrar opinión
                 </a>
             </li>
         </ul>
@@ -79,9 +80,9 @@
         <h3 class="text-center mt-4">Su opinión nos sería de gran utilidad</h3>
         <div class="container">
             <div class="form-group">
-                <textarea class="form-control" id="opinion" rows="4" placeholder="Escriba su Opinion"></textarea>
+                <textarea class="form-control" id="opinion" rows="4" placeholder="Escriba su Opinión" maxlength="300"></textarea>
             </div>
-            <input type="button" class="btn btn-success" onclick="RegistrarOpinion()" value="Registrar Opinion"></button>
+            <input type="button" class="btn btn-success" onclick="RegistrarOpinion()" value="Registrar Opinión"></button>
         </div>
     </main>
 
