--- a/template/consultar_cita_admin.html
+++ b/template/consultar_cita_admin.html
@@ -79,19 +79,7 @@
     <main class="pt-4">
                 
         <div class="container">
-            <h2 class="text-center mb-4">Administración de Inquilinos</h2>
-            <div class="row text-center panel justify-content-center align-middle">
-                <div class="col-lg-4 col-md-6 col-12 ">
-                    <div class="boton bg-success d-flex align-items-center justify-content-center">
-                        <a href="nuevo-inquilo.html" class="text-light">
-                            <i class="material-icons">add</i>
-                            <p>Nuevo Inquilino</p>
-                        </a>
-                    </div>
-                </div>
-            </div>
-
-            <h3 class="text-center mt-4">Lista de Inquilinos</h3>
+            <h3 class="text-center mt-4">Lista de Citas</h3>
 
             <table class="table">
                 <caption>Listado Actualizado...</caption>
@@ -105,34 +93,34 @@
                 </thead>
                     <tbody>
                         <tr>
-                                <th scope="row">1</th>
-                                <td>Lionel</td>
-                                <td>Messi</td>
-                                <td>
-                                    <a href="#" class="btn btn-danger" onclick="Borrar()">Borrar</a>
-                                    <a href="editar_inquilino.html" target="_blank" class="btn btn-success">Editar</a>
-                                    <a href="#" class="btn btn-primary" onclick="Ver()">Ver</a>
-                                </td>
+                            <th scope="row">1</th>
+                            <td>Paola</td>
+                            <td>Rodriguez</td>
+                            <td>
+                                <a href="#" class="btn btn-danger" onclick="BorrarCita()">Borrar</a>
+                                <a href="#" onclick="AprobarCita()"class="btn btn-success">Aprobar cita</a>
+                                <a href="#" class="btn btn-primary" onclick="VerDetalles()">Ver detalles</a>
+                            </td>
                         </tr>
                         <tr>
-                                <th scope="row">2</th>
-                                <td>Cristiano</td>
-                                <td>Ronaldo</td>
-                                <td>
-                                    <a href="#" class="btn btn-danger" onclick="Borrar()">Borrar</a>
-                                    <a href="editar_inquilino.html" target="_blank" class="btn btn-success">Editar</a>
-                                    <a href="#" class="btn btn-primary" onclick="Ver()">Ver</a>
-                                </td>
+                           <th scope="row">2</th>
+                            <td>Maria</td>
+                            <td>Cardenas</td>
+                            <td>
+                                <a href="#" class="btn btn-danger" onclick="BorrarCita()">Borrar</a>
+                                 <a href="#" onclick="AprobarCita()"class="btn btn-success">Aprobar cita</a>
+                                <a href="#" class="btn btn-primary" onclick="VerDetalles()">Ver detalles</a>
+                            </td>
                         </tr>
                         <tr>
-                                <th scope="row">3</th>
-                                <td>Emma</td>
-                                <td>Watson</td>
-                                <td>
-                                    <a href="#" class="btn btn-danger" onclick="Borrar()">Borrar</a>
-                                    <a href="editar_inquilino.html" target="_blank" class="btn btn-success" >Editar</a>
-                                    <a href="#" class="btn btn-primary" onclick="Ver()">Ver</a>
-                                </td>
+                            <th scope="row">3</th>
+                            <td>Emma</td>
+                            <td>Watson</td>
+                            <td>
+                                <a href="#" class="btn btn-danger" onclick="BorrarCita()">Borrar</a>
+                               <a href="#" onclick="AprobarCita()"class="btn btn-success">Aprobar cita</a>
+                                <a href="#" class="btn btn-primary" onclick="VerDetalles()">Ver detalles</a>
+                            </td>
                         </tr>
                     </tbody>
                   </table>
